--- a/docs/系统设计.md
+++ b/docs/系统设计.md
@@ -49,6 +49,93 @@
   └── 日志系统
 ```
 
+### 4.1.1.1 数据库关系表设计
+
+系统数据库采用关系型数据库PostgreSQL，下面是系统中的主要关系表设计：
+
+#### （1）用户相关表
+
+1. User（用户表）
+   - 主键：id
+   - 属性：email, password, firstName, lastName, createdAt, updatedAt
+
+2. Notification（通知表）
+   - 主键：id
+   - 外键：userId -> User.id
+   - 属性：type, title, message, read, link, createdAt, updatedAt
+
+3. UserPreference（用户偏好表）
+   - 主键：id
+   - 外键：userId -> User.id
+   - 属性：name, value, createdAt, updatedAt
+
+#### （2）商家相关表
+
+1. Dealer（商家表）
+   - 主键：id
+   - 属性：email, password, name, businessId, phone, logo, businessName, address, city, province, postalCode, businessHours, description, createdAt, updatedAt
+
+2. SalesData（销售数据表）
+   - 主键：id
+   - 外键：dealerId -> Dealer.id
+   - 属性：date, revenue, orderCount, period, createdAt, updatedAt
+
+3. Customer（客户表）
+   - 主键：id
+   - 外键：dealerId -> Dealer.id
+   - 属性：name, email, phone, status, totalSpent, lastOrderDate, createdAt, updatedAt
+
+#### （3）车型相关表
+
+1. Car（车型表）
+   - 主键：id
+   - 外键：dealerId -> Dealer.id
+   - 属性：name, basePrice, description, thumbnail, defaultColor, createdAt, updatedAt, status
+
+2. CarFeature（车型特性表）
+   - 主键：id
+   - 外键：carId -> Car.id
+   - 属性：featureKey, name, score, createdAt, updatedAt
+   - 唯一约束：(carId, featureKey)
+
+3. CarConfigCategory（配置类别表）
+   - 主键：id
+   - 属性：categoryKey, name, description, createdAt, updatedAt
+
+4. CarConfigOption（配置选项表）
+   - 主键：id
+   - 外键：carId -> Car.id, categoryId -> CarConfigCategory.id
+   - 属性：optionKey, name, description, price, thumbnail, colorCode, createdAt, updatedAt
+   - 唯一约束：(carId, categoryId, optionKey)
+
+#### （4）用户交互表
+
+1. SavedConfiguration（保存的配置表）
+   - 主键：id
+   - 外键：userId -> User.id, carId -> Car.id
+   - 属性：options, timestamp, totalPrice, createdAt, updatedAt
+
+2. Order（订单表）
+   - 主键：id
+   - 外键：userId -> User.id, dealerId -> Dealer.id, carId -> Car.id, customerId -> Customer.id
+   - 属性：amount, status, configuration, createdAt, updatedAt
+
+3. Review（评价表）
+   - 主键：id
+   - 外键：userId -> User.id, carId -> Car.id
+   - 属性：title, content, rating, helpful, verified, images, tags, configurationId, createdAt, updatedAt
+
+4. ReviewHelpful（评价有用标记表）
+   - 主键：id
+   - 外键：reviewId -> Review.id, userId -> User.id
+   - 属性：createdAt
+   - 唯一约束：(reviewId, userId)
+
+5. BrowsingHistory（浏览历史表）
+   - 主键：id
+   - 外键：userId -> User.id, carId -> Car.id
+   - 属性：timestamp, duration, createdAt, updatedAt
+
 ### 4.1.2 系统部署架构
 
 系统采用容器化部署方案，使用Docker容器技术和Kubernetes集群管理，实现系统的高可用性和可扩展性。
