--- a/docs/系统实现.md
+++ b/docs/系统实现.md
@@ -742,48 +742,47 @@ export async function completeRequestLog(requestLogId: string, statusCode: numbe
 
 ```tsx
 // hooks/use-mobile.tsx
-"use client"
+import * as React from "react"
 
-import { useState, useEffect } from 'react'
-
-export function useMobile() {
-  const [isMobile, setIsMobile] = useState(false)
-
-  useEffect(() => {
-    // 检查是否为移动设备
-    const checkMobile = () => {
-      setIsMobile(window.innerWidth < 768)
-    }
-
-    // 初始检查
-    checkMobile()
-
-    // 监听窗口大小变化
-    window.addEventListener('resize', checkMobile)
-
-    // 清理监听器
-    return () => window.removeEventListener('resize', checkMobile)
-  }, [])
-
-  return isMobile
+const MOBILE_BREAKPOINT = 768
+export function useIsMobile() {
+  const [isMobile, setIsMobile] = React.useState<boolean | undefined>(undefined)
+  React.useEffect(() => {
+    const mql = window.matchMedia(`(max-width: ${MOBILE_BREAKPOINT - 1}px)`)
+    const onChange = () => {
+      setIsMobile(window.innerWidth < MOBILE_BREAKPOINT)
+    }
+    mql.addEventListener("change", onChange)
+    setIsMobile(window.innerWidth < MOBILE_BREAKPOINT)
+    return () => mql.removeEventListener("change", onChange)
+  }, [])
+  return !!isMobile
 }
-```
+关键代码（响应式布局示例）：
 
-```tsx
-// components/configurator/configurator.tsx（部分代码）
-// 响应式布局
-return (
-  <div className="container mx-auto py-8 px-4">
-    <div className="flex flex-col lg:flex-row gap-8">
-      {/* 返回按钮 */}
-      <Button
-        variant="ghost"
-        size="icon"
-        className="absolute top-4 left-4 z-10"
-        onClick={() => router.push('/cars')}
-      >
-        <ArrowLeft className="h-4 w-4" />
-      </Button>
-
-      {/* 3D视图区域 - 在大屏幕上占据2/3宽度 */}
-      <div className="w-full lg:w-2/3 h-[400px] md:h-[500px
+import { Button } from "@/components/ui/button"
+import { ArrowLeft } from "lucide-react"
+import { useRouter } from "next/navigation"
+export default function ConfiguratorPage() {
+  const router = useRouter()
+  return (
+    <div className="container mx-auto py-8 px-4">
+      <Button
+        variant="ghost"
+        size="icon"
+        className="absolute top-4 left-4 z-10"
+        onClick={() => router.push('/cars')}
+      >
+        <ArrowLeft className="h-4 w-4" />
+      </Button>
+      <div className="flex flex-col lg:flex-row gap-8">
+        <div className="w-full lg:w-2/3 h-[400px] md:h-[500px]">
+          {/* 3D视图组件 */}
+        </div>
+        <div className="w-full lg:w-1/3">
+          {/* 配置选项及其他信息 */}
+        </div>
+      </div>
+    </div>
+  )
+}
